# portunusd

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.adoc  README.md  ROADMAP.adoc  ROADMAP.md  SECURITY.adoc  SECURITY.md  remote.zsh
.github/ISSUE_TEMPLATE/: bug_report.md  disclosure-tracking-issue.md  feature_request.md  question.md  security-tracking-issue.md
connected_fork/: Cargo.toml  README.md
connected_fork/src/: lib.rs
cpoc/: .gitignore  Makefile  README.md  alice.md  bob.md  client.c  server.c
diagrams/: README.adoc  startup-and-request-handling.mmd
doors/: Cargo.toml
doors/examples/: forkpair.rs  forkpairdescriptor.rs  lsas.rs  lsasd.rs  ropen.rs  ropend.rs
doors/src/: lib.rs
errors/src/: lib.rs
etc/: APP.md  DPA.md  PDP.md  README.md  ROADMAP.adoc  ROADMAP.md  portunusd.conf
etc/artwork/: README.md
etc/diagrams/: README.md  application-doorway.mmd  detailed-server-state.mmd  startup-and-request-handling.mmd
etc/manual/: README.md  portunusd.8  portunusd.conf.5
etc/packaging/: buildinfo.txt  longdesc.txt  packlist.txt  release.mk  shortdesc.txt
etc/www/: index.html
examples/: README.md  echo.rs  file_opener.rs  go_away.rs  hello_web.rs
examples/hello_web/: Cargo.toml
illumos/: Cargo.toml
illumos/src/: door_h.rs  lib.rs  stropts_h.rs
lib/: Cargo.toml
portunusd/: Cargo.toml
portunusd/src/: attendant.rs  counter.rs  lib.rs  main.rs
src/: Makefile  README.adoc  README.md  application_doorway.rs  config.rs  counter.rs  descriptor.rs  door.rs  errors.rs  jamb.rs  lib.rs  main.rs  path.rs  plan.rs  relay_doors.rs  relaydoors.c  server_procedure.rs  unsafe_doors.rs
svc/: Cargo.toml
(+31 files in other folders)
