[package]
name = "portunusd"
version = "0.2.0"
authors = ["Robert D. French <robert@robertdfrench.me>"]
edition = "2018"
description = "Avant-garde Network Application Server for illumos"
repository = "https://github.com/robertdfrench/portunusd"
license = "MPL-2.0"
keywords = ["illumos", "door", "port"]
publish = true

[dependencies]
libc = "0.2.96"
rayon = "1.5.1"
