[package]
name = "doors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
illumos = { path = "../illumos" }
libc = "0.2.96"

[dev-dependencies]
clap = { version = "4.1.4", features = ["derive"] }
